--- a/dashboard-styles.css
+++ b/dashboard-styles.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    font-style: normal;
     background-color: #121212; /* Dark background */
     color: #e0e0e0; /* Light text */
     height: 100%;
@@ -11,7 +13,7 @@ body {
     background: #6a11cb;
     background: linear-gradient(to right, #6a11cb, #2575fc);
     color: white;
-    padding: 10px 20px;
+    padding: 15px 25px;
     /*box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);*/
 }
 
@@ -102,8 +104,14 @@ body {
     background: #1e1e1e; /* Dark background */
     padding: 20px;
     border-radius: 10px;
-    /*box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.2);*/
     flex: 1;
+    max-height: 400px; /* Set the maximum height */
+    overflow-y: auto; /* Allow vertical scrolling */
+    scrollbar-width: none; /* Hide scrollbar in Firefox */
+}
+
+.external-articles::-webkit-scrollbar {
+    display: none; /* Hide scrollbar in Webkit-based browsers (Chrome, Safari, Edge) */
 }
 
 .external-articles h3 {
@@ -130,3 +138,4 @@ body {
 .external-articles a:hover {
     text-decoration: underline;
 }
+
