--- a/style.css
+++ b/style.css
@@ -3,6 +3,14 @@ body {
     margin: 0;
     font-family: sans-serif;
     color: black;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+    padding-left: 7%;
+    padding-right: 7%;
+}
+
+body.fade-out {
+    opacity: 0;
 }
 
 /* Dashboard-specific styles */
