--- a/style.css
+++ b/style.css
@@ -444,6 +444,12 @@ a:hover {
     }
 }
 
+.zodiac-table-container, .table-container {
+    overflow-y: auto;
+    overflow-x: auto;
+    max-height: 400px;
+}
+
 table {
     width: 100%;
     overflow: hidden;
@@ -459,8 +465,16 @@ thead {
 thead th {
     text-align: center;
     padding: 12px 16px;
-    text-align: left;
+    vertical-align: middle;
     font-size: 14px;
+    position: sticky;
+    top: 0;
+}
+
+.zodiac-table-container thead th {
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 
 tbody tr:nth-child(odd) {
@@ -479,12 +493,6 @@ tbody td {
 
 tbody tr:hover {
     background-color: #f1f1f1;
-}
-
-th, td {
-    border: none;
-    text-align: center;
-    vertical-align: middle;
 }
 
 .edit-container {
