--- a/style.css
+++ b/style.css
@@ -605,3 +605,15 @@ tbody tr:hover {
     justify-content: center;
     width: 100%;
 }
+
+textarea {
+    width: 100%; 
+    height: 300px; 
+    max-width: 100%;
+    max-height: 450px; 
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: both; /* Allows the user to resize both vertically and horizontally */
+}
